# SpeechProcessingDesktop

./: .gitignore  CLAUDE.md  README.md  README.vi.md  pyproject.toml  requirements-chunkformer.txt  requirements-tts.txt  run.md
VieNeu-TTS/: run.md
WhisperLiveKit/: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.cpu  compose.yml  pyproject.toml
desktop/: .gitignore  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
docs/: 01-problem-analysis.md  02-assumption-audit.md  03-research-plan.md  04-architecture-review.md  05-benchmark-methodology.md  06-technology-recommendations.md  07-roadmap.md  08-open-questions.md  09-candidate-evaluation-matrix.md  10-implementation-decision.md  11-implementation-plan.md  12-phase1-status.md  13-whisper-cpp-metal.md  14-phase2-video.md  15-phase3-streaming.md  16-phase3-streaming-polish.md  17-quality-pass.md  18-testing-ui.md  19-mic-diagnosis.md  20-mic-fixes.md  21-mic-consecutive-sessions.md  22-mic-consecutive-sessions-fix.md  23-mic-revert-and-instrumentation.md  24-file-video-transcription-plan.md  25-file-video-ux-improvements-plan.md  CHUNKFORMER_TEST.md  DESKTOP_APP.md  README.md  SETUP.md  SETUP.vi.md  TTS_INTEGRATION.md
scripts/: _ensure_vad.sh  ab_engines.py  bootstrap_linux.sh  bootstrap_macos.sh  bootstrap_windows.ps1  build_desktop_linux.sh  build_desktop_macos.sh  build_desktop_windows.ps1  diag_mic.py  (+22 more)
(+120 files in other folders)
