[project]
name = "vnstt"
version = "0.1.0"
description = "Local-first Vietnamese Speech-to-Text (Phase 1: audio MVP)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "faster-whisper>=1.1.0",
]

[project.optional-dependencies]
# Lightweight local testing UI only (not required to use the library/CLI).
ui = [
    "gradio>=5,<6",
]

[project.scripts]
transcribe = "vnstt.cli:main"
vnstt-ui = "vnstt.ui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vnstt"]
