[package]
name = "sttlive-desktop"
version = "0.1.0"
description = "Native launcher/wrapper for the local STTLive STT + TTS servers"
edition = "2021"
rust-version = "1.77"

# The binary Tauri runs. Keeping it named `sttlive-desktop` avoids clashing with
# the library crate below.
[[bin]]
name = "sttlive-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Tiny blocking HTTP client for health checks (no async runtime needed).
ureq = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
